fix issue #32 - items will contrast background color

--- a/src/less/import/main.less
+++ b/src/less/import/main.less
@@ -113,10 +113,11 @@ section{
             width: 12px;
             height: 12px;
             margin-right: 5px;
-            background: rgba(255, 255, 255, 0.53);
+            background: white;
+            opacity:0.45;
             border-radius: 6px;
             &.active {
-                background:white;
+                opacity: 1;
             }
         }
     }
